(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/23:
   * Update documentation for Next/PrevWindow (Simon / thanks Jonas 
     Koelker), sf.net patch #1474825
     doc/asciidoc/fluxbox.txt
   * Focus singular windows on a workspace (Simon / thanks Jonas Koelker)
     sf.net patch #1474722
     Window.cc
   * Tidy up window cycling, and make linear mode work in order of 
     creation (Thanks Mark Tiefenbruck, mark at tiefenbruck dot org)
     FocusControl.hh/cc
*06/04/22:
   * Fix workspace menu corruption when window title changes (Simon)
     sf.net bug #1113668
     Menu.cc MenuItem.cc
   * Fix crash when toolbar disabled (Simon)
     Slit.hh/cc Screen.cc
   * Couple of memory-based fixes from valgrind (Simon)
     Keys.cc Screen.cc MenuCreator.cc
   * Applied #1467926 and #1458069, minor other changes (Mathias)
     docs/asciidoc/fluxbox.txt
   * static CommandParser could be used after destruction (Simon)
     Fixes sf.net #1474444, segfault when DISPLAY not set
     CommmandParser.hh/cc
   * Minor cosmetic changes, thanks Semushin Slava (php-coder AT ngs ru)
     main.cc Screen.cc util/startfluxbox.in
   * First draft of new docs in docs/asciidoc (Mathias)
   * Cosmetics to Workspace.hh CurrentWindowCmd.cc
*06/04/21:
   * Minor fixes to slit transparency (esp if autohidden) (Simon)
     Slit.cc
   * php_coder tells me that the nb_NO patch was somewhat broken
     Revert it for now, pending another update ... (Simon)
     nls/nb_NO/Translation.m
   * Update all transparent things when bg changes (Simon)
     (fixes sf.net #1446516 - slit transparency on start)
     FbTk/... FbPixmap.cc FbWindow.hh/cc
   * Make border between tabs same width/color as window border (Simon)
     (sf.net #1473870)
     FbWinFrame.cc
*06/04/19:
   * Add a bunch of apps to fluxbox-generate_menu, plus a new System 
     Tools menu (thanks Ku8aZ at users.sourceforge.net)
     fluxbox-generate_menu.in
   * Update Norwegian Bokml translation, nb_NO, sf.net patch #1393780