@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
 *06/04/23:
+   * Reload the apps file on fluxbox reload (Simon)
+     Remember.hh/cc fluxbox.cc AtomHandler.hh ClientPattern.hh/cc
    * Update documentation for Next/PrevWindow (Simon / thanks Jonas 
      Koelker), sf.net patch #1474825
      doc/asciidoc/fluxbox.txt
